--- a/week_03/assignment.ipynb
+++ b/week_03/assignment.ipynb
@@ -21,47 +21,61 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
+   "outputs": [],
    "source": [
+    "#Example\n",
     "\n",
-    "This is the last week of your poem assignment. Please do the following: \n",
-    "<ul>\n",
-    "    <li>Final Iteration of your 3 week poem using everything you've learned</li>\n",
-    "    <li>Bonus: A code poem that will not run (see below for example)</li>\n",
-    "</ul>"
+    "def printPoem (): \n",
+    "    print('I have eaten')\n",
+    "    print('the plums')\n",
+    "    print('that were in')\n",
+    "    print('the icebox')\n",
+    "    print('\\n')\n",
+    "    print('and which')\n",
+    "    print('you were probably')\n",
+    "    print('saving')\n",
+    "    print('for breakfast')\n",
+    "    print('\\n')\n",
+    "    print('Forgive me')\n",
+    "    print('they were delicious')\n",
+    "    print('so sweet')\n",
+    "    print('and so cold')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I have eaten\n",
+      "the plums\n",
+      "that were in\n",
+      "the icebox\n",
+      "\n",
+      "\n",
+      "and which\n",
+      "you were probably\n",
+      "saving\n",
+      "for breakfast\n",
+      "\n",
+      "\n",
+      "Forgive me\n",
+      "they were delicious\n",
+      "so sweet\n",
+      "and so cold\n"
+     ]
+    }
+   ],
    "source": [
-    "#Example: https://pioneerworks.org/broadcast/between-code-and-poetry-with-lai-yi-ohlsen"
+    "printPoem()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#code poem by Lai Yi Ohlsen \n",
-    "\n",
-    "x = expectation \n",
-    "\n",
-    "while (worry > 0 and progress < 0): \n",
-    "    progress -- \n",
-    "    worry ++ "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
